Fixed player flickering on load

--- a/src/assets/styles/video/player/_player.scss
+++ b/src/assets/styles/video/player/_player.scss
@@ -7,6 +7,7 @@
     position: relative;
     margin: 0 auto;
     width: 100%;
+    opacity: 0;
     transition: opacity 500ms ease-in-out;
 
     iframe {
